--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@mining-hub/types": "*",
     "@mining-hub/ui": "*",
-    "cheerio": "^1.0.0-rc.12",
+    "@nestjs/swagger": "11.2.4",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.38.0",
@@ -21,6 +21,7 @@
     "@tanstack/react-query-devtools": "^4.41.0",
     "@tanstack/react-table": "^8.9.3",
     "@types/mapbox-gl": "^3.4.1",
+    "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.263.1",
     "mapbox-gl": "^2.15.0",
@@ -40,7 +41,7 @@
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
-    "eslint-config-next": "14.2.35",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.1.6"
