--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "clean": "turbo clean",
     "vercel-build": "npm run build:web"
   },
+  "dependencies": {
+    "next": "14.2.35"
+  },
   "devDependencies": {
     "@turbo/gen": "^2.0.0",
     "turbo": "^2.0.0"
   },
-  "packageManager": "npm@8.15.0",
+  "packageManager": "npm@10.0.0",
   "workspaces": [
     "apps/*",
     "packages/*"
